# Llama3-Med

./: .gitattributes  .gitignore  README.md  pyproject.toml
huggingface/: configuration_llama3med.py  modeling_llama3med.py
huggingface/s2wrapper/: utils.py
llama3med/data/: dataset.py  image_preprocess.py
llama3med/eval/: eval_textvqa.py  model_vqa.py  model_vqa_loader.py  model_vqa_mmmu.py  model_vqa_pope.py  model_vqa_science.py  run_eval.py  run_tiny_llava.py
llama3med/model/: __init__.py  configuration_llama3med.py  load_model.py  modeling_llama3med.py
llama3med/train/: __init__.py  custom_finetune.py  train.py  trainer.py
llama3med/training_recipe/: __init__.py  base.py  common_recipe.py  lora_recipe.py
llama3med/utils/: arguments.py  data_utils.py  eval_utils.py
scripts/: build_path_vqa_questions.py  build_pathvqa_dataset.py  build_pubmedvision_dataset.py  build_pubmedvision_pathology.py  convert_gqa_for_eval.py  convert_mmvet_for_eval.py  convert_vqav2_for_submission.py  download_hf_models.py  download_llama3.py  setup_pubmedvision.sh  split_pubmedvision_pathology.py
scripts/eval/: pathvqa.sh
scripts/train/: finetune.sh  pretrain.sh  train_llama3.sh
tinyllava/data/: __init__.py  dataset.py
tinyllava/eval/: model_vqa.py
tinyllava/model/: __init__.py  configuration_tinyllava.py  convert_legecy_weights_to_tinyllavafactory.py  load_model.py  modeling_tinyllava.py
tinyllava/train/: custom_finetune.py  tinyllava_trainer.py  train.py
tinyllava/training_recipe/: __init__.py  base.py  qlora_recipe.py
tinyllava/utils/: logging.py  message.py  (+1 more)
(+48 files in other folders)
