[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "llama3med"
version = "1.0.0"
description = "Repo for Llama3-Med: Advancing Multi-Modal Analaysis in Biomedicine"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
]
dependencies = [
    "torch==2.1.2",
    "torchvision==0.16.2",
    "transformers>=4.43.0",
    "tokenizers",
    "peft",
    "einops",
    "einops_exts",
    "timm",
    "shortuuid",
    "markdown2[all]",
    "loguru",
    "numpy<2.0.0"
]

[project.optional-dependencies]
train = ["deepspeed==0.14.0", "ninja", "wandb"]

[project.urls]
"Homepage" = "https://github.com/standardmodelbio/Llama3-Med"
"Bug Tracker" = "https://github.com/standardmodelbio/Llama3-Med/issues"

[tool.setuptools.packages.find]
exclude = ["assets*", "benchmark*", "docs", "dist*", "playground*", "scripts*", "tests*"]

[tool.wheel]
exclude = ["assets*", "benchmark*", "docs", "dist*", "playground*", "scripts*", "tests*"]

